--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,5 +1,6 @@
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="index.html">Sport +</a>
+<div class="content" th:fragment="admin">
+<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/">Sport +</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -7,12 +8,12 @@
         </button>
         <div class="navbar-nav">
             <div class="nav-item text-nowrap">
-                <a class="nav-link px-3" href="index.html">Sign out</a>
+                <a class="nav-link px-3" href="#">Sign out</a>
             </div>
         </div>
     </header>
 
-    <div class="container-fluid">
+    <div  class="container-fluid">
         <div class="row">
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
                 <div class="position-sticky pt-3 sidebar-sticky">
@@ -78,9 +79,10 @@
                     <div th:if="${#httpServletRequest.getRequestURI().startsWith('/admin')}">
                             Bienvenue sur la page admin
                     </div>
-                    <div th:if="${#httpServletRequest.getRequestURI().startsWith('/admin/product')}" th:replace="addprod :: addprod" >
+                    <div th:if="${#httpServletRequest.getRequestURI().startsWith('/admin/product')}">
                     </div>
                 </div>
             </main>
         </div>
     </div>
+</div>
