--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,4 +1,4 @@
-<div id="header">
+<div th:fragment="header" id="header">
     <div class="topbar">je suis top bar</div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -10,7 +10,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="admin.html">admin</a>                  
+              <a class="nav-link" href="admin">admin</a>
             </div>
           </div>
         </div>
