--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,20 +10,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
     </script>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="../templates/style.css">
+    <script src="../templates/script.js"></script>
 </head>
 
-<body th:if="${#httpServletRequest.getRequestURI().startsWith('/admin')}" th:style="display: none;">
-    <div th:replace="header :: header"></div>
-    <div class="content">
-        je suis content
+<body th:if="${ not #httpServletRequest.getRequestURI().startsWith('/admin') }">
+    <div class="content" >
+        <div th:replace="/header :: header"></div>
+        <div th:replace="/footer :: footer" ></div>
     </div>
-    <div th:replace="footer :: footer"></div>    
 </body>
 
-<body th:if="${#httpServletRequest.getRequestURI().startsWith('/admin')}">
-    <div th:replace="admin :: admin"></div>
-    <div th:replace="footer :: footer"></div>
+<body th:if="${#httpServletRequest.getRequestURI().startsWith('/admin') }">
+    <div th:replace="/admin :: admin" ></div>
+    <div th:replace="/footer :: footer" ></div>
 </body>
+
 </html>
