--- a/src/main/resources/templates/addprod.html
+++ b/src/main/resources/templates/addprod.html
@@ -1,1 +1,1 @@
-<p>je suis un paragraphe en test en fonction de l'url</p>
+<p th:fragment ="addprod">je suis un paragraphe en test en fonction de l'url</p>
