--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,4 +1,21 @@
-<div class="content" th:fragment="admin">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
+    <link href="/css/style.css" rel="stylesheet"/>
+    <script src="/js/script.js"></script>
+</head>
+
+<body >
+<div class="content">
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/">Sport +</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
@@ -47,24 +64,23 @@
                     </h6>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">
+                            <a class="nav-link active" aria-current="page" href="index">
                                 <span data-feather="home" class="align-text-bottom"></span>
                                 Mon site
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="admin/addprod">
                                 <span data-feather="file" class="align-text-bottom"></span>
                                 Gestion de produit
                             </a>
                         </li>
                     </ul>
-
                 </div>
             </nav>
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div th:if="${#httpServletRequest.getRequestURI().startsWith('/admin/product')}"
+                <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Dashboard</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
@@ -76,13 +92,13 @@
                     </div>
                 </div>
                 <div class="content">
-                    <div th:if="${#httpServletRequest.getRequestURI().startsWith('/admin')}">
-                            Bienvenue sur la page admin
-                    </div>
-                    <div th:if="${#httpServletRequest.getRequestURI().startsWith('/admin/product')}">
-                    </div>
                 </div>
             </main>
         </div>
     </div>
 </div>
+<footer>
+    <div class="footer">je suis footer</div>
+</footer>
+</body>
+</html>
