--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,4 @@
 <div th:fragment="header" id="header">
-    <div class="topbar">je suis top bar</div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -9,6 +8,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="productpage">productpage</a>
               <a class="nav-link" href="inscription">inscription</a>
               <a class="nav-link" href="admin">admin</a>
             </div>
