--- a/src/main/resources/templates/productpage.html
+++ b/src/main/resources/templates/productpage.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title >acceuil</title>
+    <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
     </script>
-    <link href="/css/style.css}" rel="stylesheet"/>
-    <script src="/js/script.js}"></script>
+    <link href="/css/style.css" rel="stylesheet"/>
+    <script src="/js/script.js"></script>
 </head>
 
 <body >
@@ -33,8 +33,11 @@
         </div>
     </nav>
 </div>
-<div class="content" >
-        je suis content
+<div class="container">
+    <div class="row">
+      <div class="col-8"> image</div>
+      <div class="col-4"> info et autre bouton</div>
+    </div>
 </div>
 <footer>
     <div class="footer">je suis footer</div>
